--- a/LosslessStitcher.Imaging.IO/LosslessStitcher.Imaging.IO.csproj
+++ b/LosslessStitcher.Imaging.IO/LosslessStitcher.Imaging.IO.csproj
@@ -42,19 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BitmapCodecIdentifier.cs" />
-    <Compile Include="BitmapCodecManager.cs" />
-    <Compile Include="BitmapCodecUtility.cs" />
-    <Compile Include="BitmapDecoder.cs" />
-    <Compile Include="BitmapEncoder.cs" />
-    <Compile Include="BitmapInfo.cs" />
-    <Compile Include="ConvertToMethods.cs" />
-    <Compile Include="CopyToMethods.cs" />
-    <Compile Include="Internals\BitmapIoWrapper.cs" />
-    <Compile Include="Internals\Bgr8888Wrapper.cs" />
-    <Compile Include="Internals\Bgr888Wrapper.cs" />
-    <Compile Include="Internals\ByteRowBufferPool.cs" />
-    <Compile Include="Internals\LockedByteBitmap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,5 +61,6 @@
   <ItemGroup>
     <None Include="Readme.md" />
   </ItemGroup>
+  <Import Project="..\LosslessStitcher.Imaging.IO.Shared\LosslessStitcher.Imaging.IO.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
