UniqueList redesigned from scratch.
Separation of IReadOnlyUniqueList from IUniqueList.
Real ReadOnlyUniqueList wrapper for modification protection.
Added support for item removal and replacement via IUniqueListEx.
Cleaned up support for DotNet collection interface to reduce misuse
and programming errors.

--- a/CollectionsUtility.Abstract/CollectionsUtility.Abstract.csproj
+++ b/CollectionsUtility.Abstract/CollectionsUtility.Abstract.csproj
@@ -2,10 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>CollectionsUtility</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CollectionsUtility.Abstract\CollectionsUtility.Abstract.csproj" />
-  </ItemGroup>
 
 </Project>
