--- a/CollectionsUtility.Tests/CollectionsUtility.Tests.csproj
+++ b/CollectionsUtility.Tests/CollectionsUtility.Tests.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="5.2.0" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CollectionsUtility.Abstract\CollectionsUtility.Abstract.csproj" />
     <ProjectReference Include="..\CollectionsUtility\CollectionsUtility.csproj" />
   </ItemGroup>
 
